--- a/entrenador.html.twig
+++ b/entrenador.html.twig
@@ -49,22 +49,22 @@
     <link rel=”canonical” href=”https://www.ictiva.com/entrenador” />
 
     <!--Icon, favicon & webapp -->
-    <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="/homes/img/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="/homes/img/favicon.ico" type="image/ico"/>
+    <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="homes/img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="homes/img/favicon.ico" type="image/ico"/>
 
     <!-- Bootstrap core CSS -->
-    <link href="/homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="/homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="/homes/css/magnific-popup.min.css" rel="stylesheet">
+    <link href="homes/css/magnific-popup.min.css" rel="stylesheet">
 
-    <link href="/homes/css/custom.min.css" rel="stylesheet">
+    <link href="homes/css/custom.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -148,7 +148,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- Button trigger modal -->
                 <button type="button" class="btn play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="/homes/img/iconos/play_icon.png" alt="" class="img-fluid play-btn">
+                  <img src="homes/img/iconos/play_icon.png" alt="" class="img-fluid play-btn">
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
 
@@ -184,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row no-padding">
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/img-trainer/gym.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="homes/img/img-trainer/gym.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
                             <h2 class="px-5 mx-5 text-white display-4 text-uppercase">Entrena en el gimnasio</h2>
                             <p class="lead mt-5 px-5 text-white text-bigger">Entrenamiento personalizado adaptado a tus necesidades y objetivos.</p>
@@ -193,7 +193,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/img-trainer/running.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="homes/img/img-trainer/running.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
                             <h2 class="px-5 mx-5 text-white display-4 text-uppercase">Corre como nunca</h2>
                             <p class="lead mt-5 px-5 text-white text-bigger">Desafía tus metas y mejora tus marcas en media marathon y marathon.</p>
@@ -370,8 +370,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container-fluid">
         <div class="row text-center py-4">
             <div class="col">
-                <img src="/homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
-                <img src="/homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
+                <img src="homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
+                <img src="homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
             </div>
         </div>
     </div>
@@ -384,19 +384,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/homes/vendor/jquery/jquery.min.js"></script>
-    <script src="/homes/vendor/tether/tether.min.js"></script>
-    <script src="/homes/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="homes/vendor/jquery/jquery.min.js"></script>
+    <script src="homes/vendor/tether/tether.min.js"></script>
+    <script src="homes/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/homes/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="/homes/vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="/homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="homes/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="homes/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="/homes/js/creative.min.js"></script>
+    <script src="homes/js/creative.min.js"></script>
 
-    <script src="/homes/js/tutorial.min.js"></script>
+    <script src="homes/js/tutorial.min.js"></script>
 
    <script> 
      $('.navbar-nav>li>a').on('click', function(){
