--- a/homes/css/custom.css
+++ b/homes/css/custom.css
@@ -1,11 +1,11 @@
 html {
-    font-size: 14px;
+    font-size: 15px;
 }
 body {
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-family: 'omnes-pro','Open Sans','Helvetica Neue',Arial,sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
 }
 
 /* text */
@@ -61,7 +61,8 @@ header h3.lead {
 }
 
 /* buttons */
-.btn{
+.btn-cta{
+  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
   border-radius: 0;
   font-weight: 700;
   text-transform: uppercase;
@@ -100,6 +101,12 @@ header h3.lead {
 .bg-dark{
   background-color: #333333;
 }
+.bg-grey{
+  background-color: #dfdfdb
+}
+.bg-grey:hover{
+  background-color: #cfcfcb
+}
 .bg-darkgrey{
   background: #2c2e30;
 }
@@ -122,45 +129,49 @@ header.bg-gym{
   background: url(../img/fotos/home.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  min-height: 90vh;
 }
 header.bg-nutrition{
   background: url(../img/img-nutrition/home.jpg);
   background-size: cover;
   background-position:center;
-  height: 100vh;
+  min-height: 90vh;
 }
 header.bg-wellness{
   background: url(../img/img-wellness/home.jpg);
   background-size: cover;
   background-position:center bottom;
-  height: 100vh;
+  min-height: 90vh;
 }
 header.bg-trainer{
   background: url(../img/img-trainer/home.jpg);
   background-size: cover;
   background-position:center bottom;
-  height: 100vh;
+  min-height: 90vh;
 }
 
 /* Recources */
 li{
-	list-style: none;
+  list-style: none;
 }
 .no-padding {
     padding: 0;
 }
 hr {
-	border-top: 1px solid rgba(255,255,255,.1);
+  border-top: 1px solid rgba(255,255,255,.1);
 }
 .footer-list a {
-	color: inherit!important;
+  color: inherit!important;
 }
 .footer-list a:hover{
-	color: #e57532!important;
+  color: #e57532!important;
+}
+.footer-list-item{
+  font-size: 0.9rem;
+  line-height: 1.7rem;
 }
 .bg-wellness a:hover {
-	text-decoration: none!important;
+  text-decoration: none!important;
 }
 .navbar-toggler-left{
   left: 0rem!important;
@@ -169,20 +180,23 @@ hr {
   border: none!important;
 }
 .navbar-bg-icon{
-  background: url(../img/menu-icon.svg) no-repeat left center;
+  background: url(/img/menu-icon.svg) no-repeat left center;
   display: block;
   padding: 5px 0 5px 40px;
   min-height: 35px;
   cursor: pointer;
   background-size: 35px;
 }
+h1:focus, h2:focus, h3:focus, h4:focus, h5:focus, h6:focus, p:focus, div:focus, span:focus, strong:focus, button:focus, input:focus, textarea:focus, a:focus, nav:focus, header:focus, footer:focus, section:focus{
+  outline: 0!important;
+}
 
 /* Menú Navegación */
 #menu-wrap{
-	max-height: 75px;
+  max-height: 75px;
 }
 .navbar-brand img{
-	max-width: 120px;
+  max-width: 120px;
 }
 .img-logo{
   max-width: 200px;
@@ -194,7 +208,7 @@ hr {
 
 /* Cabecera */
 header{
-	margin-top: 75px;
+  margin-top: 75px;
 }
 
 
@@ -356,14 +370,14 @@ div.block figcaption p, div.block figcaption a{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 .bg-motitrainer{
   background: url(../img/img-trainer/motivacional.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 
 .bg-motitrainer2{
@@ -371,7 +385,7 @@ div.block figcaption p, div.block figcaption a{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 
 
@@ -381,7 +395,15 @@ div.block figcaption p, div.block figcaption a{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
+}
+
+.bg-motisalud{
+  background: url(../img/img-wellness/motivator.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 90vh;
 }
 
 /* App */
@@ -391,14 +413,14 @@ div.block figcaption p, div.block figcaption a{
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 .bg-app2{
   background: url(../img/img-trainer/app_trainergym2.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 
 .bg-app3{
@@ -406,7 +428,7 @@ div.block figcaption p, div.block figcaption a{
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 
 .bg-app4{
@@ -414,14 +436,14 @@ div.block figcaption p, div.block figcaption a{
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100vh;
+  min-height: 90vh;
 }
 
 /* responsive */
 
 @media (max-width: 575px) {
   .display-1{
-    font-size: 4rem!important;
+    font-size: 4.1rem!important;
   }
   .bg-nutrition .display-1{
     font-size: 2.8rem!important; 
@@ -439,20 +461,45 @@ div.block figcaption p, div.block figcaption a{
     font-size: 1.8rem;
     line-height: 1.8rem;
   }
-  .h4, h4 {
+  h4, .h4 {
     font-size: 1.2rem;
+  }
+  .menu-mob a.btn.btn-double{
+    padding: .5rem;
   }
   .main-btn {
       font-size: 1.1rem;
-  }  
+  }
   .navbar-brand img{
     max-width: 90px;
   }
   .menu-mob a.btn{
     font-weight: 300!important;
   }
+  .btn.btn-xl{
+    font-size: 0.9rem;
+  }
   .modal-dialog{
     margin: 180px auto 0;
+  }
+  .text-bigger{
+    font-size: 1.4rem;
+  }
+  img.img-fluid.play-btn{
+    max-width: 70%;
+  }
+  .play-btn-wrap p{
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .hover-box p{
+    opacity: 1;
+  }
+  .cl-box:before{
+    opacity: 1;
+    background: rgba(0,0,0,.1);
   }
 }
 
@@ -466,24 +513,44 @@ div.block figcaption p, div.block figcaption a{
 
 @media (min-width: 992px) {
 
-	div.block figure:hover figcaption {
-		-moz-transform: translateY(-35%);
-		-webkit-transform: translateY(-35%);
-		-o-transform: translateY(-35%);
-		-ms-transform: translateY(-35%);
-		transform: translateY(-35%);
-	    transition: transform .8s ease-out;
-	    -moz-transition: transform .8s ease-out;
-	    -webkit-transition: transform .8s ease-out;
-	    -o-transition: transform .8s ease-out;
-	}
-	div.block figure:hover figcaption p, div.block figure:hover figcaption a{
-	    opacity: 1;    
-	    transition: opacity .5s ease-out;
-	    -moz-transition: opacity .5s ease-out;
-	    -webkit-transition: opacity .5s ease-out;
-	    -o-transition: opacity .5s ease-out;
-	}
+  div.block figure:hover figcaption {
+    -moz-transform: translateY(-35%);
+    -webkit-transform: translateY(-35%);
+    -o-transform: translateY(-35%);
+    -ms-transform: translateY(-35%);
+    transform: translateY(-35%);
+      transition: transform .8s ease-out;
+      -moz-transition: transform .8s ease-out;
+      -webkit-transition: transform .8s ease-out;
+      -o-transition: transform .8s ease-out;
+  }
+  div.block figure:hover figcaption p, div.block figure:hover figcaption a{
+      opacity: 1;    
+      transition: opacity .5s ease-out;
+      -moz-transition: opacity .5s ease-out;
+      -webkit-transition: opacity .5s ease-out;
+      -o-transition: opacity .5s ease-out;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+      #menu-wrap .navbar-brand img{
+            max-width: 100px;
+      }
+      #menu-wrap .nav-item,#menu-wrap .menu-mob li a.btn{
+        font-size: .85rem;
+      }
+      .display-4{
+        font-size: 3rem!important;
+      }
+}
+@media (max-width: 1200px) {      
+      .footer-list h5{
+        font-size: 1rem;
+      }
+      .footer-list-item{
+        font-size: 0.8rem;
+      }
 }
 
 @media (min-width: 1200px) {
