--- a/index.html.twig
+++ b/index.html.twig
@@ -157,25 +157,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-<header class="bg-gym d-flex align-items-center section-header-video">
-        <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="../ictiva/homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="../ictiva/homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
-        <div class="row align-items-center h-100 m-0 w-100 bg-video">
+<header class="bg-gym d-flex align-items-center">
+        <div class="row align-items-center h-100 m-0 w-100">
             <div class="col text-center no-padding">
-                <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
+                <h1 class="display-1 text-white text-uppercase">Gimnasio Online</h1>
                 <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">¡Desafía tus límites!</h3>
 
-                <!-- Button trigger modal 
+                <!-- Button trigger modal -->
                 <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
                   <img src="../ictiva/homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
                 
 
-                <!-- Modal 
+                <!-- Modal -->
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -188,7 +183,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                -->
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a></p>
                 </div>
