--- a/entrenador.html.twig
+++ b/entrenador.html.twig
@@ -10,7 +10,7 @@
 
     <title>Entrenador virtual - Entrenamiento para gimnasio y runners - ictiva.</title>
 
-    <!-- Google Optimze -->
+    <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
     <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
     h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
@@ -155,9 +155,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <header class="bg-trainer d-flex align-items-center">
         <div class="row align-items-center h-100 m-0 w-100">
-            <div class="col text-center no-padding">
+            <div class="col text-center no-padding promo">
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">20% Dto - Código: <span class="font-weight-bold">ENER20</span></strong><br>Por tiempo limitado</p>
                 <h1 class="display-1 text-white text-uppercase">Entrenador virtual</h1>
-                <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">Haz de ti tu mejor versión</h3>
+                <!-- <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">Haz de ti tu mejor versión</h3> -->
 
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
