--- a/index.html.twig
+++ b/index.html.twig
@@ -10,7 +10,7 @@
 
     <title>Tu Gimnasio en casa. Haz ejercicios en casa online con nuestros vídeos. Con nuestro gimnasio virtual podrás hacer gimnasia en casa cómodamente. - ictiva</title>
 
-    <!-- Google Optimze -->
+    <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
     <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
     h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
@@ -159,31 +159,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
-            <div class="col text-center no-padding">
+            <div class="col text-center no-padding promo">
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">20% Dto - Código: <span class="font-weight-bold">ENER20</span></strong><br>Por tiempo limitado</p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
                 <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">¡Desafía tus límites!</h3>
-
-                <!-- Button trigger modal 
-                <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
-                  <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
-                </button>
-                
-
-                <!-- Modal 
-                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-body embed-responsive embed-responsive-16by9">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                <iframe src="https://player.vimeo.com/video/232641103?color=fcbe17&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                -->
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a></p>
                 </div>
