--- a/salud.html.twig
+++ b/salud.html.twig
@@ -51,7 +51,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="ictiva, tu gimnasio online" />
     <meta property="og:description" content="Ejercicios de abdominales hipopresivos, clases de Yoga y Pilates onliney ejercicios para la espalda para mejorar tu salud y bienestar." />
-    <meta property="og:url" content="https://www.ictiva.com/" />
+    <meta property="og:url" content="https://www.ictiva.com/salud" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
@@ -156,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="bg-wellness d-flex align-items-center">
         <div class="row align-items-center h-100 m-0 w-100">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">20% Dto - Código: <span class="font-weight-bold">ENER20</span></strong><br>Por tiempo limitado</p>
+                <!-- <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">20% Dto - Código: <span class="font-weight-bold">ENER20</span></strong><br>Por tiempo limitado</p> -->
                 <h1 class="display-1 text-white text-uppercase">Salud y Bienestar</h1>
                 <!-- <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">Cuidamos tu cuerpo</h3> -->
 
