--- a/entrenador.html.twig
+++ b/entrenador.html.twig
@@ -117,13 +117,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link px-2 text-uppercase mt-3 mt-sm-0" href="/">Gimnasio</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="salud">Salud</a>
+                                <a class="nav-link" href="/salud">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase active">
-                                <a class="nav-link" href="entrenador">Entrenador Virtual <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="/entrenador">Entrenador Virtual <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="nutricion">Nutrición</a>
+                                <a class="nav-link" href="/nutricion">Nutrición</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
