--- a/salud.html.twig
+++ b/salud.html.twig
@@ -117,10 +117,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link px-2 text-uppercase mt-3 mt-sm-0" href="/">Gimnasio</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase active">
-                                <a class="nav-link" href="salud">Salud <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="/salud">Salud <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="entrenador">Entrenador Virtual</a>
+                                <a class="nav-link" href="/entrenador">Entrenador Virtual</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
                                 <a class="nav-link" href="nutricion">Nutrición</a>
