--- a/index.html.twig
+++ b/index.html.twig
@@ -58,22 +58,22 @@
     <link rel=”canonical” href=”https://www.ictiva.com/” />
 
     <!--Icon, favicon & webapp -->
-    <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="homes/img/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="homes/img/favicon.ico" type="image/ico"/>
+    <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/ico"/>
 
     <!-- Bootstrap core CSS -->
-    <link href="homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="homes/css/magnific-popup.min.css" rel="stylesheet">
+    <link href="/homes/css/magnific-popup.min.css" rel="stylesheet">
 
-    <link href="homes/css/custom.min.css" rel="stylesheet">
+    <link href="/homes/css/custom.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -160,6 +160,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
+                <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p>
                 <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
                 <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">#ConquistaTuCuerpo</h3>
@@ -177,8 +178,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
         <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
+            <source src="/homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="/homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
     </header>
@@ -187,28 +188,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row py-5">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/iconos/tiempo.png" class="sr-icons mb-3" alt="reloj" height="80px" width="auto">
+                        <img src="/homes/img/iconos/tiempo.png" class="sr-icons mb-3" alt="reloj" height="80px" width="auto">
                         <h4 class="h3">24 HORAS/ 365 DÍAS</h3>
                         <p class="text-muted">Acceso ilimitado donde quieras y a la hora que quieras.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div>
-                        <img src="homes/img/iconos/ejercicio.png" class="sr-icons mb-2" alt="abdominales" height="100px" width="auto">
+                        <img src="/homes/img/iconos/ejercicio.png" class="sr-icons mb-2" alt="abdominales" height="100px" width="auto">
                         <h4 class="h3">+800 CLASES</h3>
                         <p class="text-muted">Clases dirigidas con ejercicios de 21 disciplinas diferentes.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/iconos/niveles.png" class="sr-icons mb-3" alt="companero" height="80px" width="auto">
+                        <img src="/homes/img/iconos/niveles.png" class="sr-icons mb-3" alt="companero" height="80px" width="auto">
                         <h4 class="h3">TU PONES EL LÍMITE</h3>
                         <p class="text-muted">5 niveles de dificultad para adaptarse a tu forma física.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/iconos/copa.png" class="sr-icons mb-3" alt="sonrisa" height="80px" width="auto">
+                        <img src="/homes/img/iconos/copa.png" class="sr-icons mb-3" alt="sonrisa" height="80px" width="auto">
                         <h4 class="h3">MOTIVATOR SYSTEM</h3>
                         <p class="text-muted">Haz los ejercicios y suma puntos, sube en la clasificación y gana premios.</p>
                     </div>
@@ -221,7 +222,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row no-padding">
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
                             <h2 class="px-1 px-sm-5 mx-0 mx-sm-5 text-white display-4 text-uppercase">Pérdida de peso y mejora del cardio</h2>
                             <div class="hidden-sm-down">
@@ -239,7 +240,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
                             <h2 class="px-1 px-sm-5 mx-0 mx-sm-5 text-white display-4 text-uppercase">Muscular, Tonificar y Definir</h2>
                             <div class="hidden-sm-down">
@@ -318,8 +319,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h3 class="display-4 py-4 text-uppercase">Tu rutina de ejercicios en el bolsillo con tu gimnasio online</h1>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=home&utm_medium=google-play&utm_campaign=ictiva&utm_content=" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&utm_campaign=ictiva&utm_content=" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&utm_source=home&utm_medium=google-play&utm_campaign=ictiva&utm_content=" target="_blank"><img src="/homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&utm_campaign=ictiva&utm_content=" target="_blank"><img src="/homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
@@ -463,8 +464,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container-fluid">
         <div class="row text-center py-4">
             <div class="col">
-                <img src="homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
-                <img src="homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
+                <img src="/homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
+                <img src="/homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
             </div>
         </div>
     </div>
@@ -477,19 +478,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="homes/vendor/jquery/jquery.min.js"></script>
-    <script src="homes/vendor/tether/tether.min.js"></script>
-    <script src="homes/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/homes/vendor/jquery/jquery.min.js"></script>
+    <script src="/homes/vendor/tether/tether.min.js"></script>
+    <script src="/homes/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="homes/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="homes/vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="/homes/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/homes/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="/homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="homes/js/creative.min.js"></script>
+    <script src="/homes/js/creative.min.js"></script>
 
-    <script src="homes/js/tutorial.min.js"></script>
+    <script src="/homes/js/tutorial.min.js"></script>
 
     <script> 
      $('.navbar-nav>li>a').on('click', function(){
