--- a/index.html.twig
+++ b/index.html.twig
@@ -160,18 +160,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p>
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p>
+                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p>
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
                 <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">#ConquistaTuCuerpo</h3>
                 <!-- <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">¡Desafía tus límites!</h3> -->
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Inicia tu Entrenamiento</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Inicia tu Entrenamiento</a></p>
                     </div>
                   </div>
                 </div>
@@ -232,7 +232,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/combat/">Combat</a></p>
                                 <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-boxeo/">Boxeo</a></p>
                                 <p class="py-5">
-                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Inicia tu Entrenamiento</a>
                                 </p>
                             </div>
                         </figcaption>
@@ -250,7 +250,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-de-crossfit/">CrossFitness</a></p>
                                 <p class="lead text-bigger"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-abdominales/">Abdominales</a></p>
                                 <p class="py-5">
-                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Inicia tu Entrenamiento</a>
                                 </p>
                             </div>
                         </figcaption>
@@ -308,7 +308,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p class="lead py-2 text-bigger">La herramienta para hacer ejercicios en casa que te premia por mantenerte siempre activo y motivado en tus entrenamientos!</p>
               <p class="lead py-4 text-bigger">“Los ganadores se ponen metas, los perdedores excusas”</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">Inicia tu Entrenamiento</a>
                 </p>
             </div>
         </div>
