--- a/salud.html.twig
+++ b/salud.html.twig
@@ -156,8 +156,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="bg-wellness d-flex align-items-center">
         <div class="row align-items-center h-100 m-0 w-100">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p>
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p>
+                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p>
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
                 <h1 class="display-1 text-white text-uppercase">Salud y Bienestar</h1>
                 <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">#ConquistaTuCuerpo</h3>
 
@@ -181,12 +181,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">Inicia tu Entrenamiento</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">Inicia tu Entrenamiento</a></p>
                     </div>
                   </div>
                 </div>
@@ -266,7 +266,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h3 class="display-3 py-4 text-uppercase">"Mens Sana in Corpore Sano"</h1>
               <p class="lead py-2 text-bigger">Por que hacer ejercicio cambia tu cuerpo, tu mente y tu actitud</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">Inicia tu Entrenamiento</a>
                 </p>
             </div>
         </div>
