--- a/ejercicios-aerobic.html.twig
+++ b/ejercicios-aerobic.html.twig
@@ -268,14 +268,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-    <header class="bg-landing pt-4 mt-5 align-items-center section-header-video">
+    <header class="bg-landing pt-4 mt-2 mt-lg-5 align-items-center">
         <div class="container bg-video d-block d-sm-flex justify-content-center mt-5">
-            <div class="row mb-0 mt-5 px-4">
+            <div class="row mb-0 mt-5 px-sm-3 px-md-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
-                    <h1 class="text-white text-uppercase display-4 pb-lg-3">EJERCICIOS DE AERÓBIC EN CASA</h1>
-                    <p class="text-white h5 pb-lg-4">Entrena desde casa con nuestras sesiones de aeróbic online.</p>
-                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">EJERCICIOS DE AERÓBIC PARA PRINCIPIANTES</h2>
-                    <p class="text-white text-medium mb-5">Tonifica tu cuerpo y quema calorías al ritmo de la música. Sesiones para principiantes y niveles más avanzados!</p>
+                    <h1 class="text-white text-uppercase display-4 pb-lg-3">AERÓBIC EN CASA</h1>
+                    <p class="text-white h5 pb-lg-4">Entrena en casa con nuestras sesiones de aeróbic online.</p>
+                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">EJERCICIOS DE AERÓBIC Y PONTE EN FORMA</h2>
+                    <p class="text-white text-medium mb-5">Tonifica tu cuerpo y quema calorías al ritmo de la música!</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
@@ -297,11 +297,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
-        <!-- <video autoplay loop muted class="w-100 hidden-sm-down" poster="/img/slide-home/video-main-placeholder.png">
-            <source src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="video/mp4">
-            <source src="https://www.ictiva.com/homes/video/yoga_video.webm" type="video/webm">
-            <embed src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="application/x-shockwave-flash" width="100%" height="570" allowscriptaccess="always" allowfullscreen="true" autoplay="true" showcontrols="0">
-        </video> -->
+        <video autoplay loop muted class="w-100 hidden-lg-down">
+            <source src="/videos/17-se-aerobic.webm" type="video/webm">
+            <source src="/videos/17-se-aerobic.mp4" type="video/mp4">
+            <source src="/videos/17-se-aerobic.ogv" type="video/ogg">
+            Your browser does not support HTML5 video.
+        </video>
     </header>
     <section class="container-fluid">
         <div class="row">
