--- a/operacion-bikini.html.twig
+++ b/operacion-bikini.html.twig
@@ -268,14 +268,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-    <header class="bg-landing pt-4 mt-5 align-items-center section-header-video">
-        <div class="container bg-video d-block d-sm-flex justify-content-center mt-5">
-            <div class="row mb-0 mt-5 px-4">
+    <header class="bg-landing pt-4 mt-2 mt-lg-5 align-items-center section-header-video">
+        <div class="container-fluid bg-video d-block d-sm-flex justify-content-center mt-5">
+            <div class="row mb-0 mt-5 px-0 px-sm-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">Operación Bikini</h1>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">LUCE CUERPO ESTE VERANO</h2>
                     <p class="text-white text-medium mb-5">Planes de entrenamiento con videosesiones y planes nutricionales para ponerte en forma este verano.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento Ahora</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
